# Representative_French_Power_Grids

./: .gitignore  .pre-commit-config.yaml  Changelog.md  Plotting_Network_Results.ipynb  README.md  biome.jsonc  pyproject.toml
data/: Cluster_Size.csv
data/networks/: 11_MVFeeder0725.json  11_MVFeeder1363.json  11_MVFeeder1365.json  11_MVFeeder2143.json  11_MVFeeder2298.json  11_MVFeeder3298.json  11_MVFeeder3385.json  11_MVFeeder4375.json  11_MVFeeder4471.json  11_MVFeeder4794.json  11_MVFeeder4885.json  24_MVFeeder0277.json  24_MVFeeder0337.json  24_MVFeeder0752.json  24_MVFeeder1097.json  24_MVFeeder1448.json  24_MVFeeder1482.json  24_MVFeeder1514.json  24_MVFeeder2211.json  27_MVFeeder0223.json  27_MVFeeder0797.json  27_MVFeeder1284.json  27_MVFeeder2091.json  27_MVFeeder2268.json  28_MVFeeder0290.json  28_MVFeeder0498.json  28_MVFeeder0548.json  28_MVFeeder0757.json  28_MVFeeder1181.json  28_MVFeeder1208.json  28_MVFeeder1269.json  28_MVFeeder1378.json  28_MVFeeder2047.json  28_MVFeeder2214.json  32_MVFeeder0100.json  32_MVFeeder0194.json  32_MVFeeder0296.json  32_MVFeeder0835.json  32_MVFeeder1005.json  32_MVFeeder1552.json  (+110 more)
scripts/: convert_networks.py  plot_networks.py  update_networks.py
